// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toHaveBeenCalledWithContext includes the custom mock name in the error message 1`] = `
<d>expect(</b><r>named-mock</g><d>).</b>not<d>.</b>toHaveBeenCalledWithContext<d>(</b><g>expected</g><d>)</b>

Expected: not <g>"foo"</g>
Received:     <d>"foo"</b>

Number of calls: <r>1</g>
`;

exports[`toHaveBeenCalledWithContext works only on spies or fn 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveBeenCalledWithContext<d>(</b><g>expected</g><d>)</b>

<b>Matcher error</b>: <r>received</g> value must be a mock or spy function

Received has type:  function
Received has value: <r>[Function mock]</g>
`;

exports[`toHaveBeenCalledWithContext works when not called 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>toHaveBeenCalledWithContext<d>(</b><g>expected</g><d>)</b>

Expected: <g>"foo"</g>

Number of calls: <r>0</g>
`;

exports[`toHaveBeenCalledWithContext works with a context that doesn't match 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>toHaveBeenCalledWithContext<d>(</b><g>expected</g><d>)</b>

Expected: <g>"foo"</g>
Received: <r>"bar"</g>
Number of calls: <r>1</g>
`;

exports[`toHaveBeenCalledWithContext works with a context that doesn't match with matchers 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>toHaveBeenCalledWithContext<d>(</b><g>expected</g><d>)</b>

Expected: <g>Any<Number></g>
Received: <r>"bar"</g>
Number of calls: <r>1</g>
`;

exports[`toHaveBeenCalledWithContext works with a context that matches 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>not<d>.</b>toHaveBeenCalledWithContext<d>(</b><g>expected</g><d>)</b>

Expected: not <g>"foo"</g>
Received:     <d>"foo"</b>

Number of calls: <r>1</g>
`;

exports[`toHaveBeenCalledWithContext works with a context that matches with a matcher 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>not<d>.</b>toHaveBeenCalledWithContext<d>(</b><g>expected</g><d>)</b>

Expected: not <g>Any<String></g>
Received:     <d>"foo"</b>

Number of calls: <r>1</g>
`;

exports[`toHaveBeenLastCalledWithContext includes the custom mock name in the error message 1`] = `
<d>expect(</b><r>named-mock</g><d>).</b>not<d>.</b>toHaveBeenLastCalledWithContext<d>(</b><g>expected</g><d>)</b>

Expected: not <g>"foo"</g>

Number of calls: <r>1</g>
`;

exports[`toHaveBeenLastCalledWithContext works only on spies or fn 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveBeenLastCalledWithContext<d>(</b><g>expected</g><d>)</b>

<b>Matcher error</b>: <r>received</g> value must be a mock or spy function

Received has type:  function
Received has value: <r>[Function mock]</g>
`;

exports[`toHaveBeenLastCalledWithContext works when not called 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>toHaveBeenLastCalledWithContext<d>(</b><g>expected</g><d>)</b>

Expected: <g>"foo"</g>

Number of calls: <r>0</g>
`;

exports[`toHaveBeenLastCalledWithContext works with a context that doesn't match 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>toHaveBeenLastCalledWithContext<d>(</b><g>expected</g><d>)</b>

Expected: <g>"foo"</g>
Received: <r>"bar"</g>
Number of calls: <r>1</g>
`;

exports[`toHaveBeenLastCalledWithContext works with a context that doesn't match with matchers 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>toHaveBeenLastCalledWithContext<d>(</b><g>expected</g><d>)</b>

Expected: <g>Any<Number></g>
Received: <r>"bar"</g>
Number of calls: <r>1</g>
`;

exports[`toHaveBeenLastCalledWithContext works with a context that matches 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>not<d>.</b>toHaveBeenLastCalledWithContext<d>(</b><g>expected</g><d>)</b>

Expected: not <g>"foo"</g>

Number of calls: <r>1</g>
`;

exports[`toHaveBeenLastCalledWithContext works with a context that matches with a matcher 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>not<d>.</b>toHaveBeenLastCalledWithContext<d>(</b><g>expected</g><d>)</b>

Expected: not <g>Any<String></g>
Received:     <d>"foo"</b>

Number of calls: <r>1</g>
`;

exports[`toHaveBeenNthCalledWithContext includes the custom mock name in the error message 1`] = `
<d>expect(</b><r>named-mock</g><d>).</b>not<d>.</b>toHaveBeenNthCalledWithContext<d>(</b>n<d>, </b><g>expected</g><d>)</b>

n: 1
Expected: not <g>"foo"</g>

Number of calls: <r>1</g>
`;

exports[`toHaveBeenNthCalledWithContext works only on spies or fn 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveBeenNthCalledWithContext<d>(</b>n<d>, </b><g>expected</g><d>)</b>

<b>Matcher error</b>: <r>received</g> value must be a mock or spy function

Received has type:  function
Received has value: <r>[Function mock]</g>
`;

exports[`toHaveBeenNthCalledWithContext works when not called 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>toHaveBeenNthCalledWithContext<d>(</b>n<d>, </b><g>expected</g><d>)</b>

n: 1
Expected: <g>"foo"</g>

Number of calls: <r>0</g>
`;

exports[`toHaveBeenNthCalledWithContext works with a context that doesn't match 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>toHaveBeenNthCalledWithContext<d>(</b>n<d>, </b><g>expected</g><d>)</b>

n: 1
Expected: <g>"foo"</g>
Received: <r>"bar"</g>
Number of calls: <r>1</g>
`;

exports[`toHaveBeenNthCalledWithContext works with a context that doesn't match with matchers 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>toHaveBeenNthCalledWithContext<d>(</b>n<d>, </b><g>expected</g><d>)</b>

n: 1
Expected: <g>Any<Number></g>
Received: <r>"bar"</g>
Number of calls: <r>1</g>
`;

exports[`toHaveBeenNthCalledWithContext works with a context that matches 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>not<d>.</b>toHaveBeenNthCalledWithContext<d>(</b>n<d>, </b><g>expected</g><d>)</b>

n: 1
Expected: not <g>"foo"</g>

Number of calls: <r>1</g>
`;

exports[`toHaveBeenNthCalledWithContext works with a context that matches with a matcher 1`] = `
<d>expect(</b><r>jest.fn()</g><d>).</b>not<d>.</b>toHaveBeenNthCalledWithContext<d>(</b>n<d>, </b><g>expected</g><d>)</b>

n: 1
Expected: not <g>Any<String></g>
Received:     <d>"foo"</b>

Number of calls: <r>1</g>
`;
